--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "scripts": {
     "start": "electron .",
-    "dev": "DISPLAY=:0 electron . --dev --no-sandbox --disable-gpu-sandbox --disable-software-rasterizer --enable-logging",
+    "dev": "electron . --dev --no-sandbox --disable-gpu-sandbox --disable-software-rasterizer --enable-logging",
     "dev:ubuntu": "DISPLAY=:0 electron . --dev --no-sandbox --disable-gpu-sandbox --disable-software-rasterizer --enable-logging --disable-web-security --disable-features=VizDisplayCompositor",
     "dev:win": "electron . --dev --enable-logging",
     "dev:mac": "electron . --dev --enable-logging",
